syntax = "proto3";

option go_package = "microservices/compilations/proto";

message Genre {
  int32 ID = 1;
  string Name = 2;
}

message MovieInfo {
  int64 ID = 1;
  string Name = 2;
  repeated Genre Genre = 3;
  string Picture = 4;
}

message MovieCompilation {
  string Name = 1;
  repeated MovieInfo Movies = 2;
}

message MovieCompilationsArr {
  repeated MovieCompilation MovieCompilations = 1;
}

message GetMainCompilationsOptions {}

message GetByIDOptions {
  int32 ID = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetCompilationOptions {
  int32 limit = 1;
  int32 offset = 2;
}

message GetFavoritesOptions {
  repeated int64 id = 1;
  int64 limit = 2;
  int64 offset = 3;
}

service MovieCompilations {
  rpc GetAllMovies(GetCompilationOptions) returns(MovieCompilation) {}
  rpc GetAllSeries(GetCompilationOptions) returns(MovieCompilation) {}
  rpc GetMainCompilations(GetMainCompilationsOptions) returns(MovieCompilationsArr) {}
  rpc GetByGenre(GetByIDOptions) returns(MovieCompilation) {}
  rpc GetByCountry(GetByIDOptions) returns(MovieCompilation) {}
  rpc GetByMovie(GetByIDOptions) returns(MovieCompilation) {}
  rpc GetByPerson(GetByIDOptions) returns(MovieCompilation) {}
  rpc GetTopByYear(GetByIDOptions) returns(MovieCompilation) {}
  rpc GetTop(GetCompilationOptions) returns(MovieCompilation) {}
  rpc GetFavorites(GetFavoritesOptions) returns(MovieCompilation) {}
}